# P2PDemo

./: .gitignore  CMakeLists.txt  README.md
client/: CMakeLists.txt  Cert.h  Makefile  P2PTransfer.cpp
web/: index.html
web/css/: p2p.css
web/js/: p2p.js
wsServ/: client.py  go.mod  main.go
